# Elliott-803-Emulator

./: .gitignore  CMakeLists.txt  Charger.c  Charger.h  Common.c  Common.h  Contactor.c  Contactor.h  Cpu.c  Cpu.h  E803-types.h  E803ops.c  E803ops.h  Emulate.c  Emulate.h  Emulator.h  Hands.c  Hands.h  HoursRun.c  HoursRun.h  Items.h  Keyboard.c  Keyboard.h  Logging.c  Logging.h  Main.c  Main.h  PTS.c  PTS.h  Plotter.c  Plotter.h  PowerCabinet.c  PowerCabinet.h  README.md  Sound.c  Sound.h  ToDo.txt  Wiring.c  Wiring.h  fsm.c  (+2 more)
803-Resources/: .#CMakeLists.txt  803-Emulator.glade  CMakeLists.txt  createTarballs.sh
803-Resources/graphics/: HoursRunDigits.xpm  calcomp-buttons.xpm  calcomp.xpm  wg.xpm
